--- a/ex/package.json
+++ b/ex/package.json
@@ -2,7 +2,7 @@
   "name": "ex",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "ex": "node bin/www.js",
     "tsc": "tsc --watch",
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
-    "express": "^4.18.2",
     "typescript": "^5.0.4"
   }
 }
