--- a/ex/package.json
+++ b/ex/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/node": "^20.2.5",
     "typescript": "^5.0.4"
   }
